# rust-examples

./: Cargo.toml  readme.md
axum-example/: Cargo.toml
axum-example/src/: algorithm.rs  error.rs  main.rs  response.rs
codewars/src/: lib.rs  rot13.rs
cos-example/: Cargo.toml
cos-example/src/: main.rs
crawler/: Cargo.toml
crawler/src/: error.rs  lib.rs
docker/: docker-compose.yml  init.sql
grammar/: Cargo.toml  readme.md
grammar/closure/: main.rs  main2.rs  main3.rs  main4.rs
grammar/src/: main.rs
grammar/src/format/: mod.rs
grammar/src/future/: mod.rs
grammar/src/iterator/: from_iterator.rs  iter.rs  mod.rs
grammar/src/marker/: mod.rs
grammar/src/marker/sized/: mod.rs
grammar/src/pointer/: boxes.rs  mod.rs
grammer/src/: main.rs
grammer/src/format/: mod.rs
grammer/src/iterator/: mod.rs
grammer/src/marker/copy/: mod.rs
grammer/src/marker/send/: mod.rs
grammer/src/pointer/: cell.rs  rc.rs
redis-example/: Cargo.toml
rocket-example/: Cargo.toml  readme.md
rocket-example/src/: api_key.rs  main.rs  tests.rs
web/: Cargo.toml  Rocket.toml
web/migrations/2021-10-24-065417_create_posts/: up.sql
web/src/: main.rs  models.rs  schema.rs
