[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.3" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tower-http = { version = "0.1", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
sea-query = "0.12.8"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "mysql", "chrono"] }
chrono = "0.4.19"
rs-snowflake = "0.5.0"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
