[package]
name = "cos-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = { version = "0.3" }
aws-sdk-s3 = { version = "0.3" }
aws-types = { version = "0.3" }
aws-endpoint = { version = "0.3" }
structopt = { version = "0.3", default-features = false }
tracing-subscriber = "0.3.3"
http = "0.2.1"
