[package]
name = "crawler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.26"
anyhow = "1.0.26"
reqwest = {version = "*", features = ["blocking", "json"] }
scraper = "0.12.0"
select = "0.5.0"
url = { git = "https://github.com/divinerapier/url.git" }

[dev-dependencies]
serde_json = "*"

[[bin]]
name = "gushiwen"
path = "bin/gushiwen/main.rs"
